# Translate

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
data/eval_audio/: references.json
docker/: Dockerfile  docker-compose.yml
notebooks/: demo_and_error_analysis.ipynb
scripts/: compare_live.py  compare_ner_approaches.py  evaluate.py  run_benchmark.py  scrap.py  scrape_and_process.py  train_classifier.py
src/: langdetect_util.py  pipeline.py
src/api/: __init__.py  app.py
src/api/static/: index.html
src/data/: dataset.py  preprocessing.py  scraper.py
src/evaluation/: benchmark.py  metrics.py
src/models/: __init__.py  asr.py  classifier.py  ner.py  summarizer.py  translator.py
src/utils/: config.py  logging.py
tests/: test_api.py  test_config.py  test_event.py  test_langdetect.py  test_ner.py  test_preprocessing.py  test_translate.py
